<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainConstraint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/primenitCel"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="425dp"
        android:backgroundTint="#C80057"
        android:fontFamily="@font/montsemibold"
        android:text="@string/Приступить"
        android:textColor="#FFFFFF"
        app:cornerRadius="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#23A429" />

    <androidx.cardview.widget.CardView
        android:layout_width="98dp"
        android:layout_height="34dp"
        android:layout_marginBottom="447dp"
        app:cardBackgroundColor="#FDF3F3"
        app:cardCornerRadius="16dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textCountry"
            android:layout_width="90dp"
            android:layout_height="33dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:fontFamily="@font/montregular"
            android:gravity="center"
            android:padding="10dp"
            android:scaleX="1.3"
            android:scaleY="1.3"
            android:text="@string/Задание"
            android:textColor="#FF2F2F"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintBase"
        android:layout_width="350dp"
        android:layout_height="460dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="1dp"
            app:cardBackgroundColor="#FBEEEE"
            app:cardCornerRadius="10dp"
            app:cardElevation="3dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintAll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintCountry"
                    android:layout_width="match_parent"
                    android:layout_height="435dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">


                    <View
                        android:id="@+id/viewLine5"
                        android:layout_width="0dp"
                        android:layout_height="6dp"
                        android:layout_marginStart="96dp"
                        android:layout_marginEnd="96dp"
                        android:background="@drawable/line"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <View
                        android:id="@+id/viewLine6"
                        android:layout_width="0dp"
                        android:layout_height="6dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="40dp"
                        android:background="@drawable/line"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/mountains_of_christmas"
                        android:text="@string/destroy_the_target"
                        android:textColor="#F3001C"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="160dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:srcCompat="@drawable/alime_pricel_1" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="160dp"
                        android:layout_height="150dp"
                        android:layout_marginStart="2dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="2dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        app:srcCompat="@drawable/alime_pricel_2" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="164dp"
                        android:fontFamily="@font/mountains_of_christmas"
                        android:text="@string/quest"
                        android:textColor="#FF0000"
                        android:textSize="28sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.501"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginEnd="12dp"
                        android:fontFamily="@font/acciasanslight"
                        android:gravity="center"
                        android:text="@string/Алиме_задание"
                        android:textColor="#8D034A"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2"
                        app:layout_constraintVertical_bias="0.245" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>